// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SignUp renders SignUp component 1`] = `
<DocumentFragment>
  <div
    class="bg-white p-8 rounded-lg shadow-lg"
  >
    <div
      class="text-center mb-4"
    >
      <img
        alt="Logo"
        data-nimg="1"
        decoding="async"
        height="50"
        loading="lazy"
        src="/_next/image?url=%2Fimages%2Flogo.png&w=128&q=75"
        srcset="/_next/image?url=%2Fimages%2Flogo.png&w=64&q=75 1x, /_next/image?url=%2Fimages%2Flogo.png&w=128&q=75 2x"
        style="color: transparent;"
        width="50"
      />
    </div>
    <h2
      class="text-2xl font-bold mb-4 text-center"
    >
      Sign Up to Admin
    </h2>
    <form>
      <div
        class="mb-4"
      >
        <label
          for="name"
        >
          Name
        </label>
        <input
          class="w-full p-2 border rounded"
          id="name"
          placeholder="Your Name"
          required=""
          type="text"
        />
      </div>
      <div
        class="mb-4"
      >
        <label
          for="email"
        >
          Email
        </label>
        <input
          class="w-full p-2 border rounded"
          id="email"
          placeholder="Your Email"
          required=""
          type="email"
        />
      </div>
      <div
        class="mb-4"
      >
        <label
          for="password"
        >
          Password
        </label>
        <input
          class="w-full p-2 border rounded"
          id="password"
          placeholder="Your Password"
          required=""
          type="password"
        />
      </div>
      <button
        class="bg-teal-500 text-white p-2 rounded hover:bg-teal-600"
        type="submit"
      >
        Sign Up
      </button>
    </form>
    <div
      class="mt-4 text-center"
    >
      <p
        class="text-gray-700"
      >
        Already have an account?
        <a
          href="/admin/signin"
        />
        <a
          class="text-blue-500"
        >
           Sign in
        </a>
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`renders Signup component 1`] = `
<DocumentFragment>
  <div
    class="flex h-screen items-center justify-center bg-gray-100"
  >
    <div
      class="w-full max-w-md"
    >
      <div
        class="bg-white p-8 rounded-lg shadow-lg"
      >
        <div
          class="text-center mb-4"
        >
          <Image
            alt="Logo"
            data-nimg="1"
            decoding="async"
            height="50"
            loading="lazy"
            src="/images/logo/logo.svg"
            style="color: transparent;"
            width="100"
          />
        </div>
        <h2
          class="text-2xl font-bold mb-4 text-center"
        >
          Sign Up to TailAdmin
        </h2>
        <form>
          <div
            class="mb-4"
          >
            <label
              class="block text-gray-700"
            >
              Email
            </label>
            <input
              class="w-full p-2 border border-gray-300 rounded mt-2"
              placeholder="Enter your email"
              type="email"
              value=""
            />
          </div>
          <div
            class="mb-4"
          >
            <label
              class="block text-gray-700"
            >
              Password
            </label>
            <input
              class="w-full p-2 border border-gray-300 rounded mt-2"
              placeholder="Enter your password"
              type="password"
              value=""
            />
          </div>
          <div
            class="mb-4"
          >
            <label
              class="block text-gray-700"
            >
              Re-type Password
            </label>
            <input
              class="w-full p-2 border border-gray-300 rounded mt-2"
              placeholder="Re-enter your password"
              type="password"
              value=""
            />
          </div>
          <button
            class="w-full bg-blue-500 text-white py-2 rounded hover:bg-blue-600"
            type="submit"
          >
            Create account
          </button>
        </form>
        <div
          class="mt-4 text-center"
        >
          <p
            class="text-gray-700"
          >
            Already have an account? 
            <Link href="/admin/signin" legacyBehavior><a
              class="text-blue-500"
            >
              Sign in
            </a></Link>
          </p>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
